[package]
name = "ymdb"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version= "1.12.0", features= ["attributes"]}
clearscreen = "2.0.1"
csv = "1.3.0"
home = "0.5.9"
sqlx = {version = "0.7.3", features = [ "runtime-async-std-native-tls", "sqlite"]}
tabled = "0.15.0"
serde = "1.0.194"